--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "quotes",
   "version": "0.0.0",
   "scripts": {
+
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod --base-href https://abbyshabi.github.io/Quotes/ && angular-cli-ghpages --branch  gh-pages"
   },
   "private": true,
   "dependencies": {
